--- a/TwoScreens/Base.lproj/Main.storyboard
+++ b/TwoScreens/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="i8I-1J-3mf">
-                                <rect key="frame" x="50" y="338" width="314" height="220"/>
+                                <rect key="frame" x="50" y="334" width="314" height="228"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="FhR-YG-fPL">
                                         <rect key="frame" x="7" y="0.0" width="300" height="90"/>
@@ -38,12 +39,16 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AEj-WR-8pV">
-                                        <rect key="frame" x="136" y="125" width="42" height="30"/>
+                                        <rect key="frame" x="129" y="125" width="56" height="38"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Log In"/>
+                                        <connections>
+                                            <segue destination="Ado-t7-eUP" kind="presentation" id="igd-1A-pII"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="iBC-H2-l8g">
-                                        <rect key="frame" x="4" y="190" width="306" height="30"/>
+                                        <rect key="frame" x="4" y="198" width="306" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7TY-i1-nCx">
                                                 <rect key="frame" x="0.0" y="0.0" width="133" height="30"/>
@@ -72,12 +77,58 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28.985507246376812" y="83.705357142857139"/>
+            <point key="canvasLocation" x="186" y="84"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="2td-XM-9of">
+            <objects>
+                <viewController id="Ado-t7-eUP" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="d3Q-pf-GHM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Welcome, " borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iyR-dD-HQE">
+                                <rect key="frame" x="20" y="120" width="374" height="36"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NDW-km-tRe">
+                                <rect key="frame" x="130" y="669" width="154" height="39"/>
+                                <color key="backgroundColor" name="AccentColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log out"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bta-Zp-R6d"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                        <constraints>
+                            <constraint firstItem="bta-Zp-R6d" firstAttribute="trailing" secondItem="NDW-km-tRe" secondAttribute="trailing" constant="130" id="805-T0-sYe"/>
+                            <constraint firstItem="iyR-dD-HQE" firstAttribute="leading" secondItem="bta-Zp-R6d" secondAttribute="leading" constant="20" id="Isa-BX-iNk"/>
+                            <constraint firstItem="bta-Zp-R6d" firstAttribute="trailing" secondItem="iyR-dD-HQE" secondAttribute="trailing" constant="20" id="Ncs-GR-sU3"/>
+                            <constraint firstItem="iyR-dD-HQE" firstAttribute="top" secondItem="bta-Zp-R6d" secondAttribute="top" constant="120" id="XeH-4O-6Bb"/>
+                            <constraint firstItem="NDW-km-tRe" firstAttribute="leading" secondItem="bta-Zp-R6d" secondAttribute="leading" constant="130" id="u4u-Ov-QPs"/>
+                            <constraint firstItem="bta-Zp-R6d" firstAttribute="bottom" secondItem="NDW-km-tRe" secondAttribute="bottom" constant="100" id="wZm-Ca-7Lk"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GUT-cz-H1y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="956.52173913043487" y="83.705357142857139"/>
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
